--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,67 +4,71 @@ import logo from "../assets/logo.webp";
 ---
 
 <style>
-    .navbar {
-        grid-row: 1;
-        text-transform: uppercase;
-        padding: 0rem 1rem;
-        display: flex;
-        flex-flow: row wrap;
-        align-items: center;
-        justify-content: space-between;
-        border-bottom: 1px solid white;
-        height: fit-content;
-        color: white;
-        font-weight: 800;
-        background-color: rgb(8, 15, 37);
-        div:nth-child(2) {
-            display: flex;
-            flex-flow: row wrap;
-            gap: 2rem;
-        }
+  .navbar {
+    grid-row: 1;
+    text-transform: uppercase;
+    padding: 0rem 1rem;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid white;
+    height: fit-content;
+    color: white;
+    font-weight: 800;
+    background-color: rgb(8, 15, 37);
+    font-size: 0.8rem;
+    div:nth-child(2) {
+      display: flex;
+      flex-flow: row wrap;
+      gap: 2rem;
     }
+  }
 
-    .contact {
-        color: white;
-        text-decoration: underline;
-        background-color: rgb(89,171,225);
-        padding: 0.5rem;
-        border-radius: .3rem;
-    }
+  .contact {
+    color: white;
+    text-decoration: underline;
+    background-color: rgb(89, 171, 225);
+    padding: 0.5rem;
+    border-radius: 0.3rem;
+  }
 
-    .reset-link-style {
-        color: unset;
-        text-decoration: none;
-    }
+  .reset-link-style {
+    color: unset;
+    text-decoration: none;
+  }
+
+  .in-the-pouchett-link {
+    display: flex;
+    align-items: center;
+    flex-flow: row wrap;
+  }
 </style>
 
 <nav class="navbar">
+  <div class="in-the-pouchett-link">
     <a href="/website">
-        <Image width="100" src={logo} alt="Logo de In the Pouchette" />
+      <Image width="100" src={logo} alt="Logo de In the Pouchett" />
     </a>
+    <a class="reset-link-style" href="/website">In The Pouchett</a>
+  </div>
 
-    <div>
-        <div>
-            <a href="/website" class="reset-link-style"> IN THE POUCHETT </a>
-        </div>
+  <div>
+    <a class="reset-link-style" href="#materiel">Le Matériel</a>
+    <a href="#reference" class="reset-link-style">Références</a>
+    <a href="#studio" class="reset-link-style">Le Studio</a>
+    <a href="/website/qui-sommes-nous" class="reset-link-style"
+      >Qui sommes-nous ?<a> </a>
 
-        <div>
-            <a class="reset-link-style" href="#materiel">Le Matériel</a>
-            <a href="#reference" class="reset-link-style">Références</a>
-            <a href="#studio" class="reset-link-style">Le Studio</a>
-            <a href="/website/qui-sommes-nous" class="reset-link-style"
-                >Qui sommes-nous ?<a> </a>
-
-                <div>
-                    <a
-                        class="reset-link-style contact"
-                        href="mailto:clementmaniette.sound@gmail.com"
-                    >
-                        <i class="fa-solid fa-envelope"></i>
-                        Contact
-                    </a>
-                </div>
-            </a>
-        </div>
-    </div>
+      <div>
+        <a
+          class="reset-link-style contact"
+          href="mailto:clementmaniette.sound@gmail.com"
+        >
+          <i class="fa-solid fa-envelope"></i>
+          Contact
+        </a>
+      </div>
+    </a>
+  </div>
 </nav>
