--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -2,7 +2,7 @@
 interface Props {
   url: string;
 }
-const {url} = Astro.props
+const { url } = Astro.props;
 ---
 
 <div class="project-container">
@@ -14,7 +14,5 @@ const {url} = Astro.props
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin"
-    allowfullscreen
-    ></iframe>
+    allowfullscreen></iframe>
 </div>
-
