--- a/src/pages/qui-sommes-nous.astro
+++ b/src/pages/qui-sommes-nous.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Navbar from "../components/Navbar.astro";
-import { Image, Picture } from "astro:assets";
+import { Picture } from "astro:assets";
 import Clem from "../assets/clem.jpg";
 import Louis from "../assets/louis.jpg";
 ---
