[DEV] change insta link

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -28,7 +28,7 @@
 
   <a
     class="remove-clicked-color"
-    href="https://www.instagram.com/clem_maniette/"
+    href="https://www.instagram.com/inthepouchett/"
     target="_blank"
   >
     <i style="font-size: 4rem" class="fa-brands fa-instagram"></i>
