[DEV] Change mail link

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -54,6 +54,7 @@ import logo from "../assets/logo.webp";
   </div>
 
   <div>
+    <a href="/website/live-sessions" class="reset-link-style">Live Sessions</a>
     <a class="reset-link-style" href="#materiel">Le Matériel</a>
     <a href="#reference" class="reset-link-style">Références</a>
     <a href="#studio" class="reset-link-style">Le Studio</a>
@@ -63,7 +64,7 @@ import logo from "../assets/logo.webp";
       <div>
         <a
           class="reset-link-style contact"
-          href="mailto:clementmaniette.sound@gmail.com"
+          href="mailto:inthepouchett.studio@gmail.com"
         >
           <i class="fa-solid fa-envelope"></i>
           Contact
