--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,10 @@ import { getCollection } from "astro:content";
 const data = await getCollection("videos");
 ---
 
-<style>
+<style lang="scss">
+  @use "bulma/sass/base";
+  @use "bulma/sass/themes";
+
   .cover-image {
     background:
       linear-gradient(0deg, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%),
