--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,73 +3,56 @@ import { Image } from "astro:assets";
 import logo from "../assets/logo.webp";
 ---
 
-<style>
-  .navbar {
-    grid-row: 1;
-    text-transform: uppercase;
-    padding: 0rem 1rem;
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid white;
-    height: fit-content;
-    color: white;
-    font-weight: 800;
-    background-color: rgb(8, 15, 37);
-    font-size: 0.8rem;
-    div:nth-child(2) {
-      display: flex;
-      flex-flow: row wrap;
-      gap: 2rem;
-    }
-  }
-
-  .contact {
-    color: white;
-    text-decoration: underline;
-    background-color: rgb(89, 171, 225);
-    padding: 0.5rem;
-    border-radius: 0.3rem;
-  }
-
-  .reset-link-style {
-    color: unset;
-    text-decoration: none;
-  }
-
-  .in-the-pouchett-link {
-    display: flex;
-    align-items: center;
-    flex-flow: row wrap;
-  }
+<style lang="scss">
+  @use "bulma/sass/components/navbar" with (
+    $navbar-background-color: rgb(8, 15, 37)
+  );
+  @use "bulma/sass/elements/button";
 </style>
 
-<nav class="navbar">
-  <div class="in-the-pouchett-link">
-    <a href="/website">
-      <Image width="100" src={logo} alt="Logo de In the Pouchett" />
+<nav class="navbar" role="navigation" aria-label="main-navigation">
+  <div class="navbar-brand">
+    <div class="narvbar-item">
+      <a href="/website">
+        <Image width="100" src={logo} alt="Logo de In the Pouchett" />
+      </a>
+    </div>
+    <a class="navbar-item" href="/website">In The Pouchett</a>
+
+    <a
+      role="button"
+      class="navbar-burger"
+      aria-label="menu"
+      aria-expanded="false"
+      data-target="websiteNavbar"
+    >
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
     </a>
-    <a class="reset-link-style" href="/website">In The Pouchett</a>
   </div>
 
-  <div>
-    <a href="/website/live-sessions" class="reset-link-style">Live Sessions</a>
-    <a class="reset-link-style" href="#materiel">Le Matériel</a>
-    <a href="#reference" class="reset-link-style">Références</a>
-    <a href="#studio" class="reset-link-style">Le Studio</a>
-    <a href="/website/qui-sommes-nous" class="reset-link-style"
-      >Qui sommes-nous ?<a> </a>
+  <div id="websiteNavbar" class="navbar-menu">
+    <div class="navbar-end">
+      <a class="navbar-item" href="/website/live-sessions">Live Sessions</a>
+      <a class="navbar-item" href="#materiel">Le Matériel</a>
+      <a class="navbar-item" href="#reference">Références</a>
+      <a class="navbar-item" class="reset-link-style">Le Studio</a>
 
-      <div>
+      <a class="navbar-item" href="/website/qui-sommes-nous"
+        >Qui sommes-nous ?
+      </a>
+
+      <div class="navbar-item">
         <a
-          class="reset-link-style contact"
+          class="button is-primary"
           href="mailto:inthepouchett.studio@gmail.com"
         >
           <i class="fa-solid fa-envelope"></i>
           Contact
         </a>
       </div>
-    </a>
+    </div>
   </div>
 </nav>
