--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,7 +38,10 @@ import Contact from "../components/Contact.astro";
   </body>
 </html>
 
-<style is:global>
+<style is:global lang="scss">
+  @use "bulma/sass/base";
+  @use "bulma/sass/themes";
+
   html,
   body {
     margin: 0;
