--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -20,7 +20,7 @@ import logo from "../assets/logo.webp";
   @use "bulma/sass/elements/button";
 </style>
 
-<nav class="navbar" role="navigation" aria-label="main-navigation">
+<nav class="navbar is-fixed-top" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <a class="navbar-item" href="/website">
       <Image width={40} src={logo} alt="Logo de In the Pouchett" />
