--- a/src/pages/qui-sommes-nous.astro
+++ b/src/pages/qui-sommes-nous.astro
@@ -32,18 +32,20 @@ import Louis from "../assets/louis.jpg";
   <Navbar slot="navbar" />
 
   <section class="filled">
-    <p>
-      In The Pouchett c'est avant tout deux amis passionnés de musique Live qui
-      décidèrent en 2023 de transformer leur appartement en studio
-      d'enregistrement et de Live Sessions. L'objectif est de mettre l'accent
-      sur l'atmosphère chaleureuse du lieu et de penser l'espace la musique Live
-      et l'image.
-    </p>
+    <div class="container">
+      <p>
+        In The Pouchett c'est avant tout deux amis passionnés de musique Live
+        qui décidèrent en 2023 de transformer leur appartement en studio
+        d'enregistrement et de Live Sessions. L'objectif est de mettre l'accent
+        sur l'atmosphère chaleureuse du lieu et de penser l'espace la musique
+        Live et l'image.
+      </p>
+    </div>
   </section>
 
   <section class="pattern">
     <h1>Clément Maniette</h1>
-    <div class="people">
+    <div class="container people">
       <Picture
         src={Clem}
         alt="Clement Maniette"
@@ -65,7 +67,7 @@ import Louis from "../assets/louis.jpg";
 
   <section class="filled">
     <h1>Louis Jaumaux</h1>
-    <div class="people">
+    <div class="people container">
       <p>
         Louis est pianiste de jazz et de hip-hop, diplômé du conservatoire. Sa
         sensibilité à l'esthétique contribue à l'ambiance du studio. En plus de
