--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -44,8 +44,8 @@ import logo from "../assets/logo.webp";
   <div id="websiteNavbar" class="navbar-menu">
     <div class="navbar-end">
       <a class="navbar-item" href="/website/live-sessions">Live Sessions</a>
-      <a class="navbar-item" href="#materiel">Le Matériel</a>
-      <a class="navbar-item" href="#reference">Références</a>
+      <a class="navbar-item" href="/website/#materiel">Le Matériel</a>
+      <a class="navbar-item" href="/website/#reference">Références</a>
       <a class="navbar-item" class="reset-link-style">Le Studio</a>
 
       <a class="navbar-item" href="/website/qui-sommes-nous"
