--- a/src/pages/qui-sommes-nous.astro
+++ b/src/pages/qui-sommes-nous.astro
@@ -20,11 +20,13 @@ import Louis from "../assets/louis.jpg";
     & > p {
       margin: 0;
       flex: 1;
+      /* text-align: justify; */
     }
   }
 
   .pattern > .people > p {
     background: rgba(255, 255, 255, 0.5);
+    /* text-align: justify; */
   }
 </style>
 
@@ -34,11 +36,11 @@ import Louis from "../assets/louis.jpg";
   <section class="filled">
     <div class="container">
       <p>
-        In The Pouchett c'est avant tout deux amis passionnés de musique Live
-        qui décidèrent en 2023 de transformer leur appartement en studio
-        d'enregistrement et de Live Sessions. L'objectif est de mettre l'accent
-        sur l'atmosphère chaleureuse du lieu et de penser l'espace la musique
-        Live et l'image.
+        In The Pouchett c'est avant tout deux amis musiciens et passionnés de musique Live
+        qui décidèrent en 2023 de monter ce projet un peu fou : Transformer leur appartement parisien en studio
+        d'enregistrement spécialisé dans les Live Sessions. 
+        L'objectif est d'apporter leur patte aussi bien sonore que visuelle à à ce format déjà bien connu, 
+        en mettant l'accent sur l'atmosphère chaleureuse du lieu et de penser l'espace pour la musique Live et l'image.
       </p>
     </div>
   </section>
