--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,6 +39,7 @@ import Contact from "../components/Contact.astro";
 <style is:global lang="scss">
   @use "bulma/sass/base";
   @use "bulma/sass/themes";
+  @use "../styles/pattern.scss";
 
   html,
   body {
@@ -51,16 +52,7 @@ import Contact from "../components/Contact.astro";
     --navbar-color: black;
   }
 
-  .pattern {
-    font-size: 1.5rem;
-    background-image: url("/website/pattern.svg");
-    background-position: center;
-    background-attachment: fixed;
-    color: black;
-    grid-column: full-width;
-    margin: unset;
-    padding: 2rem;
-  }
+  // ...le style .pattern est maintenant dans pattern.scss...
 
   .filled {
     background-color: rgb(8, 15, 37);
