[FIX] Retour de la class pattern

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,10 +51,17 @@ import Contact from "../components/Contact.astro";
   :root {
     --navbar-color: black;
   }
-
+  .pattern {
+    font-size: 1.5rem;
+    color: black;
+    grid-column: full-width;
+    margin: unset;
+    padding: 2rem;
+  }
   // ...le style .pattern est maintenant dans pattern.scss...
 
   .filled {
+    font-size: 1.5rem;
     background-color: rgb(8, 15, 37);
     color: white;
     grid-column: full-width;
