[DEV] suppression du background blanc 0.5 car plus utile

--- a/src/pages/qui-sommes-nous.astro
+++ b/src/pages/qui-sommes-nous.astro
@@ -25,7 +25,7 @@ import Louis from "../assets/louis.jpg";
   }
 
   .pattern > .people > p {
-    background: rgba(255, 255, 255, 0.5);
+    /* background: rgba(255, 255, 255, 0.5); */
     /* text-align: justify; */
   }
 </style>
