--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,6 +66,10 @@ import Contact from "../components/Contact.astro";
     color: white;
     grid-column: full-width;
     padding: 2rem;
+    strong {
+      font-weight: bold;
+      color: inherit; // hérite toujours de la couleur parent
+    }
   }
 
   h1 {
